--- a/index.html
+++ b/index.html
@@ -10,15 +10,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/reset.css">
-        <link rel="stylesheet" href="assets/css/style.css">
-    
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body>
-    <div id="Header">
-        <h1>Where Ya Going?</h1>
-    </div>
+    <row>
+        <div id="Header">
+            <h1>Where Ya Going?</h1>
+        </div>
+    </row>
+    <row>
+        <col-3>
+        <!-- may trade row-column layout for standard tr, td, th -->
+        <input type="text">
+        <input type="text">
+        <button type="submit" class="btn btn-primary">Submit</button>
+        </col-3>
+        <col-9>
+        </col-9>
+
+    </row>
 
 
 
