--- a/index.html
+++ b/index.html
@@ -58,5 +58,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/javascript/index.js"></script>
     <script src="assets/javascript/api.js"></script>
+    <script src="http://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
+    <script src="http://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
 </body>
 </html>
