new layout using Materialize. Divs for from/to/mode/weather

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 m6">
-                    <i class="large material-icons left">more_horiz</i>
+            <div class="col s12 m6 valign-wrapper center-align">
+                    <i class="large material-icons">more_horiz</i>
             </div>
             <div class="col l6">
 
