--- a/index.html
+++ b/index.html
@@ -154,9 +154,14 @@
                         </div>
                     </div>
                 </div>
+        <div class="row">
+            <div class= "col-md-12" id= "map">
+                <div id="map" style="width: 600px; height: 400px;"></div>
+            </div>
         </div>
     </div>
-
+</div>
+<footer><h7>copyright &lt;&copy;&gt; 2019, made by the Trilogy Quadrant</h7></footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script type="text/javascript" src="js/materialize.min.js"></script>
