--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://js.api.here.com/v3/3.0/mapsjs-ui.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body>
-  
+
     <!-- Navigation -->
     <div class="navbar-fixed">
         <nav>
@@ -70,7 +72,7 @@
                 </div>
             </div>
             <div class="col s12 m6 valign-wrapper center-align">
-                    <i class="large material-icons">more_horiz</i>
+                <i class="large material-icons">more_horiz</i>
             </div>
             <div class="col l6">
 
@@ -145,27 +147,40 @@
             <div class="col s12 m6">
             </div>
             <div class="col s12 m6">
-                    <div class="transport-card card" id="weather">
-                        <div class="card-content white-text">
-                            <span class="card-title">Weather<i class="small material-icons right">wb_sunny</i></span>
-                            <p>
-                                Input weather api's for "local" and "destination" here!
-                            </p>
-                        </div>
+                <div class="transport-card card" id="weather">
+                    <div class="card-content white-text">
+                        <span class="card-title">Weather<i class="small material-icons right">wb_sunny</i></span>
+                        <p>
+                            Input weather api's for "local" and "destination" here!
+                        </p>
                     </div>
                 </div>
-        <div class="row">
-            <div class= "col-md-12" id= "map">
-                <div id="map" style="width: 600px; height: 400px;"></div>
+            </div>
+            <div class="row">
+                <div class="col s12 m6">
+                    <div id="map" style="width: 600px; height: 400px;"></div>
+                </div>
+                <div class="col s12 m6">
+                    <div id="panel">
+
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
-</div>
-<footer><h7>copyright &lt;&copy;&gt; 2019, made by the Trilogy Quadrant</h7></footer>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script type="text/javascript" src="js/materialize.min.js"></script>
-        <script src="./assets/javascript/index.js"></script>
+    <footer>
+        <h7>copyright &lt;&copy;&gt; 2019, made by the Trilogy Quadrant</h7>
+    </footer>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src="api.js"></script>
+    <script src="./assets/javascript/index.js"></script>
 </body>
 
 </html>
