Added ID to submit button and fixed js link

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         </form>
                     </div>
                 </div>
-                <button class="btn waves-effect blue-light right" type="submit" name="action">GO!
+                <button id="submit-button" class="btn waves-effect blue-light right" type="submit" name="action">GO!
                     <i class="material-icons right">directions</i>
                 </button>
             </div>
@@ -180,8 +180,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script src="api.js"></script>
-    <script src="./assets/javascript/index.js"></script>
+    <script src="assets/javascript/api.js"></script>
+    <script src="assets/javascript/index.js"></script>
 
 </body>
 
