buttons comment out

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <nav>
             <div class="nav-wrapper" id="header">
                 <a href="#!" class="brand-logo center">Where Ya Going?</a>
-                <ul class="right hide-on-med-and-down">
+                <!-- <ul class="right hide-on-med-and-down">
                     <li><a href="">Maps<i class="medium material-icons right">map</i></a></li>
                     <li><a href="">Weather<i class="medium material-icons right">wb_sunny</i></a></li>
-                </ul>
+                </ul> -->
             </div>
         </nav>
     </div>
