--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 m6 valign-wrapper center-align">
+            <!-- <div class="col s12 m6 valign-wrapper center-align">
                 <i class="large material-icons">more_horiz</i>
             </div>
-            <div class="col l6">
+            <div class="col l6"> -->
 
                 <!-- Second input card with id b -->
 
