--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script type="text/javascript" src="materialize/js/materialize.js"></script>
         <script src="./assets/javascript/index.js"></script>
+        <script src="assets/javascript/api-weather.js"></script>
+        <script src="assets/javascript/api-map.js"></script>
         <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
         <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
         <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
