--- a/index.html
+++ b/index.html
@@ -121,10 +121,15 @@
             <div class="col s12 m6">
                 <div class="transport-card card" id="weather">
                     <div class="card-content white-text">
-                        <span class="card-title">Weather: destination<i
-                                class="small material-icons right">wb_sunny</i></span>
-                        <p>
-                            Input weather api's for "destination" here!
+                        <span class="card-title">Weather<i class="small material-icons right" id= "icon"></i></span>
+                        <p id="maxTemp2">
+
+                        </p>
+                        <p id="minTemp2">
+                        </p>
+                        <p id="day2">
+                        </p>
+                        <p id= "night2">
                         </p>
                     </div>
                 </div>
