--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                     </div>
                 </div>
             </div>
+            <div class= "col s12 m6">
+                
+            </div>
             <div class="col s12 m6">
                 <div class="transport-card card" id="weather2">
                     <div class="card-content white-text">
@@ -151,8 +154,10 @@
                 <div class="col s12 m6">
                     <div id="map" style="width: 600px; height: 400px;"></div>
                 </div>
+                <div class= "col s12 m6">
+                </div>
                 <div class="col s12 m6">
-                    <div class="transport-card card" id="directions">
+                    <div class="transport-card card" id="directionsTable">
                         <div class="card-content black-text">
                             <span class="card-title">Directions<i
                                     class="small material-icons right">directions</i></span>
