Icon0 and Icon1

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="col s12 m6">
                 <div class="transport-card card" id="weather1">
                     <div class="card-content white-text">
-                        <span class="card-title">Weather: Local<i class="small material-icons right" id="icon"></i></span>
+                        <span class="card-title">Weather: Local<i class="small material-icons right" id="icon0"></i></span>
                         <p id="maxTemp1">
 
                         </p>
@@ -130,7 +130,7 @@
             <div class="col s12 m6">
                 <div class="transport-card card" id="weather2">
                     <div class="card-content white-text">
-                        <span class="card-title">Weather: Destination<i class="small material-icons right" id= "icon"></i></span>
+                        <span class="card-title">Weather: Destination<i class="small material-icons right" id= "icon1"></i></span>
                         <p id="maxTemp2">
 
                         </p>
