--- a/index.html
+++ b/index.html
@@ -90,20 +90,16 @@
                                 <input placeholder="Zip Code" id="b-zip" type="text" class="validate">
                                 <label for="zip_code"></label>
                             </div>
-                            <button id="submit-button" class="btn waves-effect blue-light right" type="submit"
-                                name="action">GO!
-                                <i class="material-icons right">directions</i>
-                            </button>
                         </div>
                     </form>
+                    <button id="submit-button" class="btn waves-effect blue-light right" type="submit"
+                    name="action">GO!
+                    <i class="material-icons right">directions</i>
+                    </button>
                 </div>
             </div>
-
         </div>
     </div>
-
-    </div>
-
     <div class="container">
         <div class="row">
             <div class="col s12 m6">
@@ -122,11 +118,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class= "col s12 m6">
-                
-            </div>
-
             <div class="col s12 m6">
                 <div class="transport-card card" id="weather2">
                     <div class="card-content white-text">
@@ -165,14 +156,11 @@
 
         </div>
     </div>
-    </div>
-    </div>
+</div>
 
-    <footer>
-        <h7>copyright &lt;&copy;&gt; 2019, made by the Trilogy Quadrant</h7>
-    </footer>
+<footer><h7>copyright &lt;&copy;&gt; 2019, made by the Trilogy Quadrant</h7></footer>
+    
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
-
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
