--- a/index.html
+++ b/index.html
@@ -21,22 +21,19 @@
 
 <body>
 
-    <!-- Navigation -->
+    <!-- Fixed Navbar -->
+
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper" id="header">
                 <a href="#!" class="brand-logo center">Where Ya Going?</a>
-                <!-- <ul class="right hide-on-med-and-down">
-                    <li><a href="">Maps<i class="medium material-icons right">map</i></a></li>
-                    <li><a href="">Weather<i class="medium material-icons right">wb_sunny</i></a></li>
-                </ul> -->
             </div>
         </nav>
     </div>
 
     <div class="container" id="directions">
 
-        <!-- Row with address input cards -->
+        <!-- Row with address input cards and mode of transportation -->
 
         <div class="row">
 
@@ -71,10 +68,28 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="col s12 m6 valign-wrapper center-align">
-                <i class="large material-icons">more_horiz</i>
+
+            <!-- Mode of Transportation -->
+
+            <div class="card-content mode-card" id="mode">
+                <span class="card-title">
+                    <h3>Mode:</h3>
+                </span>
+                <label>
+                    <input name="group1" type="radio" />
+                    <span></span>
+                    <i class="medium material-icons mode-icon">directions_car</i>
+                </label>
+                <p>
+                    <label>
+                        <input name="group1" type="radio" />
+                        <span></span>
+                        <i class="medium material-icons mode-icon">directions_bus</i>
+                    </label>
+
+                </p>
             </div>
-            <div class="col l6"> -->
+            <div class="col l4">
 
                 <!-- Second input card with id b -->
 
@@ -113,12 +128,18 @@
 
     </div>
 
+    <!-- Weather cards -->
+
     <div class="container">
         <div class="row">
-            <div class="col s12 m6">
+
+            <!-- Local Weather -->
+
+            <div class="col s12 m6 l4">
                 <div class="transport-card card" id="weather1">
                     <div class="card-content white-text">
-                        <span class="card-title">Weather: Local<i class="small material-icons right" id="icon"></i></span>
+                        <span class="card-title">Weather: Local<i class="small material-icons right"
+                                id="icon"></i></span>
                         <p id="maxTemp1">
 
                         </p>
@@ -126,18 +147,21 @@
                         </p>
                         <p id="day1">
                         </p>
-                        <p id= "night1">
+                        <p id="night1">
                         </p>
                     </div>
                 </div>
             </div>
-            <div class= "col s12 m6">
-                
+            <div class="col s12 m6">
+
+            <!-- Destination Weather -->
+
             </div>
             <div class="col s12 m6">
                 <div class="transport-card card" id="weather2">
                     <div class="card-content white-text">
-                        <span class="card-title">Weather: Destination<i class="small material-icons right" id= "icon"></i></span>
+                        <span class="card-title">Weather: Destination<i class="small material-icons right"
+                                id="icon"></i></span>
                         <p id="maxTemp2">
 
                         </p>
@@ -145,16 +169,19 @@
                         </p>
                         <p id="day2">
                         </p>
-                        <p id= "night2">
+                        <p id="night2">
                         </p>
                     </div>
                 </div>
             </div>
+
+            <!-- Map and directions -->
+
             <div class="row">
                 <div class="col s12 m6">
                     <div id="map" style="width: 600px; height: 400px;"></div>
                 </div>
-                <div class= "col s12 m6">
+                <div class="col s12 m6">
                 </div>
                 <div class="col s12 m6">
                     <div class="transport-card card" id="directionsTable">
@@ -171,10 +198,13 @@
 
         </div>
     </div>
-    </div>
-    </div>
-<footer><h7>copyright &lt;&copy;&gt; 2019, made by the Trilogy Quadrant</h7></footer>
-<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
+
+    <!-- Footer -->
+
+    <footer>
+        <h7>copyright &lt;&copy;&gt; 2019, made by the Trilogy Quadrant</h7>
+    </footer>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
