--- a/index.html
+++ b/index.html
@@ -207,9 +207,10 @@
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script src="assets/javascript/api-driving-directions.js"></script>
-    <script src="assets/javascript/api-public-transit.js"></script>
+    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
+    <!---<script src="assets/javascript/api-driving-directions.js"></script>-->
+   <script src="assets/javascript/api-public-transit.js"></script>
     <script src="assets/javascript/persistence.js"></script>
     <script src="assets/javascript/api-lat-long.js"></script>
     <script src="assets/javascript/api-weather.js"></script>
