--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="transport-card card" id="weather1">
                     <div class="card-content white-text">
                         <span class="card-title">Weather: Local<i class="small material-icons right"
-                                id="icon"></i></span>
+                                id="icon0"></i></span>
                         <p id="maxTemp1">
 
                         </p>
@@ -160,7 +160,7 @@
                 <div class="transport-card card" id="weather2">
                     <div class="card-content white-text">
                         <span class="card-title">Weather: Destination<i class="small material-icons right"
-                                id="icon"></i></span>
+                                id="icon1"></i></span>
                         <p id="maxTemp2">
 
                         </p>
