--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper" id="header">
-                <a href="#!" class="brand-logo center">Where Ya Going?</a>
+                <a class="brand-logo center">Where Ya Going?</a>
             </div>
         </nav>
     </div>
