added mode id's

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                     <h3>Mode:</h3>
                 </span>
                 <label>
-                    <input name="group1" type="radio" />
+                    <input name="group1" type="radio" id="car" />
                     <span></span>
                     <i class="medium material-icons mode-icon">directions_car</i>
                 </label>
                 <p>
                     <label>
-                        <input name="group1" type="radio" />
+                        <input name="group1" type="radio" id="bus" />
                         <span></span>
                         <i class="medium material-icons mode-icon">directions_bus</i>
                     </label>
