--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
-    <!---<script src="assets/javascript/api-driving-directions.js"></script>-->
+    <script src="assets/javascript/api-driving-directions.js"></script>
    <script src="assets/javascript/api-public-transit.js"></script>
     <script src="assets/javascript/persistence.js"></script>
     <script src="assets/javascript/api-lat-long.js"></script>
