final fixes for font

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <div class="row">
                                 <div class="input-field col s12">
                                     <input placeholder="City" id="a-city" type="text" class="validate">
-                                    <label for="city"></label>
+                                    <label for="city" id="aa-city"></label>
                                 </div>
                                 <div class="input-field col s12">
                                     <input placeholder="State" id="a-state" type="text" class="validate">
@@ -106,7 +106,7 @@
                             <div class="row">
                                 <div class="input-field col s12">
                                     <input placeholder="City" id="b-city" type="text" class="validate">
-                                    <label for="city"></label>
+                                    <label for="city" id="bb-city"></label>
                                 </div>
                                 <div class="input-field col s12">
                                     <input placeholder="State" id="b-state" type="text" class="validate">
